<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Want to learn Android, iOS, Machine Learning, Cloud, Front-End, Back-End, and other IT fields? Do it on Dicoding!</string>
    <string name="title_welcome_page">Welcome to Dicoding!</string>
    <string name="title_signup_page">Fill out your information below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your information first</string>
    <string name="title_login_page">Ready to upgrade your skills?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Happy Learning on Dicoding.</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Logout</string>
    <string name="list_story">Story List</string>
    <string name="description">Description</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="upload_success">Image uploaded</string>
    <string name="use_location">Use Location</string>
    <string name="location_not_available">Location not available</string>
    <string name="failed_to_get_location">Failed to get location</string>
    <string name="please_enable_google_play_and_location_service">Please enable Google Play services and location services</string>
    <string name="location_permission_denied">Location permission denied</string>

    <string name="unknown_error">Unknown error</string>
    <string name="empty_image_warning">Please select an image file first.</string>
    <string name="please_fill_all_fields">Please fill all fields.</string>

    <string name="login_success_title">Success!</string>
    <string name="login_success_message">You have successfully logged in. Excited to start learning?</string>
    <string name="login_success_positive_button">Continue</string>
    <string name="registration_success_message">"%1$s. Your account with name %2$s and email %3$s is ready. Let's login and start coding."</string>
    <string name="failed_to_connect_to_server">Failed to connect to the server. Please try again.</string>

    <string name="desc_name">Enter your name</string>
    <string name="desc_email">Enter your email address</string>
    <string name="desc_password">Enter your password</string>
    <string name="desc_image">Image Preview</string>
    <string name="desc_image_preview">Image Preview</string>
    <string name="desc_add_story">Add Story Floating Button</string>

    <string name="menu_home">Home</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_map">Map</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="logout_confirmation_title">Logout Confirmation</string>
    <string name="logout_confirmation_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="retry">Retry</string>
    <string name="error">Error</string>

    <string name="testing_email">andromeda@tiga.com</string>
    <string name="testing_password">12345678</string>
</resources>