<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_setting"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/menu_setting"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_login_logout"
        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/menu_login"
        app:showAsAction="ifRoom" />
</menu>